docs/grammar.txt
Relite Query Language Grammar
==============================

Relite uses its OWN query language, not SQL. This file documents the accepted
language. It is DOCUMENTATION ONLY -- the parser is a hand-written
recursive-descent parser and does not read this file. The authoritative grammar
is the set of parse* functions in src/frontend/parser.cpp; each production below
corresponds to one function. Terminals (tokens) are produced by
src/frontend/lexer.cpp and enumerated in include/frontend/token.hpp.


================================================================================
Keyword mapping (SQL -> Relite)
================================================================================

Relite's keywords replace SQL's. The engine internals still use SQL-flavored
TokenType names for familiarity, but only the Relite words on the right are
accepted as source.

  SQL                     Relite
  ---------------------   ---------------------
  CREATE TABLE            BUILD RELATION
  CREATE INDEX            BUILD INDEX
  CREATE VIEW             BUILD VIEW
  DROP TABLE              DISCARD RELATION
  DROP INDEX              DISCARD INDEX
  ALTER TABLE             RESHAPE RELATION
  INSERT INTO             PUT INTO
  SELECT                  FETCH
  UPDATE                  MODIFY
  DELETE                  REMOVE
  WHERE                   WHEN
  ORDER BY                SORT BY
  LIMIT                   TAKE
  OFFSET                  SKIP
  DISTINCT                UNIQUEONLY
  INNER JOIN / JOIN       LINK
  LEFT JOIN               LEFT LINK
  RIGHT JOIN              RIGHT LINK
  FULL JOIN               FULL LINK
  CROSS JOIN              CROSS LINK
  BEGIN                   START
  COMMIT                  SAVE
  ROLLBACK                UNDO

  Unchanged from SQL: FROM, INTO, VALUES, SET, ON, INDEX, GROUP BY, HAVING, AS,
  ASC, DESC, ADD, COLUMN, PRIMARY KEY, UNIQUE, NOT NULL, DEFAULT, CHECK,
  AUTO_INCREMENT (aka SERIAL), REFERENCES, IN, IS, BETWEEN, LIKE, EXISTS, AND,
  OR, NOT, TRUE, FALSE, NULL, EXPLAIN, UNION [ALL], INTERSECT, EXCEPT, the
  CASE / WHEN / THEN / ELSE / END expression keywords, the scalar functions
  (UPPER, LOWER, LENGTH, SUBSTR, TRIM, ABS, ROUND, MOD, CEIL, FLOOR, COALESCE,
  NULLIF, CAST), and the type names INT/INTEGER/BIGINT/SMALLINT,
  FLOAT/DOUBLE/REAL, BOOL/BOOLEAN, TEXT, VARCHAR.


Notation (EBNF)
---------------
  :=            is defined as
  |             alternation (choice)
  [ x ]         optional (zero or one)
  { x }         repetition (zero or more)
  ( x )         grouping
  "KEYWORD"     a literal terminal / keyword (case-insensitive)
  lower_case    a non-terminal
  UPPER_CASE    a lexical terminal class (see "Terminals")


================================================================================
Terminals (lexical)
================================================================================

  ident       := letter { letter | digit | "_" }          ; identifiers; keywords
                                                            ; are reserved
  integer     := digit { digit }                           ; unsigned; a leading
                                                            ; "-" is the unary op
  float       := digit { digit } "." digit { digit }        ; e.g. 3.14, 0.5
  string      := "'" { any-char | "''" } "'"               ; '' escapes a quote
  TRUE        := "TRUE"
  FALSE       := "FALSE"
  NULL        := "NULL"

  compOp      := "=" | "!=" | "<" | "<=" | ">" | ">="
  arithOp     := "+" | "-" | "*" | "/"
  punctuation := "(" | ")" | "," | ";" | "*" | "."

  Comments / whitespace are skipped by the lexer.
  Keywords: FETCH FROM WHEN PUT INTO VALUES BUILD RELATION INDEX ON REMOVE
            MODIFY SET DISCARD RESHAPE ADD COLUMN REFERENCES FOREIGN KEY PRIMARY
            UNIQUE DEFAULT CHECK AUTO_INCREMENT SERIAL UNIQUEONLY SORT BY GROUP
            HAVING TAKE SKIP AS ASC DESC LINK LEFT RIGHT FULL CROSS IS IN BETWEEN
            LIKE EXISTS EXPLAIN UNION INTERSECT EXCEPT ALL CASE THEN ELSE END
            START SAVE UNDO AND OR NOT INT INTEGER BIGINT SMALLINT FLOAT DOUBLE
            REAL DECIMAL NUMERIC DATE TIMESTAMP DATETIME BOOL BOOLEAN TEXT VARCHAR
            VIEW OVER PARTITION OF TRUE FALSE NULL


================================================================================
Statements
================================================================================

  statement   := ( buildStmt
                 | putStmt
                 | fetchStmt
                 | removeStmt
                 | modifyStmt
                 | discardStmt
                 | truncateStmt
                 | reshapeStmt
                 | txnStmt ) [ ";" ] ;

  buildStmt   := "BUILD" "RELATION" ident "(" columnDef { "," columnDef } ")"
               | "BUILD" "RELATION" ident "AS" fetchStmt
               | "BUILD" "INDEX" ident "ON" ident "(" ident { "," ident } ")"
               | "BUILD" "VIEW" ident "AS" fetchStmt ;

  putStmt     := "PUT" "INTO" ident [ "(" ident { "," ident } ")" ]
                 ( "VALUES" valueRow { "," valueRow } [ onConflict ]
                 | "DEFAULT" "VALUES"
                 | fetchStmt ) [ returning ] ;
  valueRow    := "(" literal { "," literal } ")" ;   ; values are literals only
  onConflict  := "ON" "CONFLICT" "(" columnRef { "," columnRef } ")" "DO"
                 ( "NOTHING" | "MODIFY" "SET" assignment { "," assignment } ) ;
  returning   := "RETURNING" ( "*" | columnRef { "," columnRef } ) ;

  fetchStmt   := [ "EXPLAIN" ] selectCore { setOp selectCore } ;
  setOp       := "UNION" [ "ALL" ] | "INTERSECT" | "EXCEPT" ;
  selectCore  := "FETCH" [ "UNIQUEONLY" ] ( "*" | fetchItem { "," fetchItem } )
                 "FROM" ident ( [ alias ] | "AS" "OF" integer )
                 { linkClause }
                 [ "WHEN"   expression ]
                 [ "GROUP" "BY" columnRef { "," columnRef } ]
                 [ "HAVING" expression ]
                 [ "SORT" "BY" sortKey { "," sortKey } ]
                 [ "TAKE" integer ] [ "SKIP" integer ] ;
  fetchItem   := ( windowExpr | aggregate | expression ) [ "AS" ident ] ;
                                          ; a bare columnRef is common;
                                          ; arithmetic/functions are ok
  alias       := [ "AS" ] ident ;
  aggregate   := ident "(" [ "UNIQUEONLY" ] ( "*" | columnRef ) ")" ; ; COUNT/SUM/
                                                                      ; AVG/MIN/MAX
  windowExpr  := windowFn "OVER" "(" [ "PARTITION" "BY" columnRef { "," columnRef } ]
                                    [ "SORT" "BY" sortKey { "," sortKey } ] ")" ;
  windowFn    := ( "ROW_NUMBER" | "RANK" | "DENSE_RANK" ) "(" ")"
               | ( "SUM" | "COUNT" | "AVG" | "MIN" | "MAX" ) "(" columnRef ")" ;
  linkClause  := "LINK" ident [ alias ] "ON" expression   ; inner join
               | "LEFT"  "LINK" ident [ alias ] "ON" expression ; left outer
               | "RIGHT" "LINK" ident [ alias ] "ON" expression ; right outer
               | "FULL"  "LINK" ident [ alias ] "ON" expression ; full outer
               | "CROSS" "LINK" ident [ alias ] ;              ; cross (no ON)
  sortKey     := columnRef [ "ASC" | "DESC" ] ;

  removeStmt  := "REMOVE" "FROM" ident [ "WHEN" expression ] [ returning ] ;

  modifyStmt  := "MODIFY" ident "SET" assignment { "," assignment }
                 [ "WHEN" expression ] [ returning ] ;
  assignment  := ident "=" expression ;

  discardStmt := "DISCARD" ( "RELATION" ident | "VIEW" ident | "INDEX" ident ) ;

  truncateStmt := "TRUNCATE" "RELATION" ident ;   ; clear all rows, keep the table

  reshapeStmt := "RESHAPE" "RELATION" ident
                 ( "ADD" [ "COLUMN" ] columnDef
                 | "DISCARD" [ "COLUMN" ] ident ) ;

  txnStmt     := "START" | "SAVE" | "UNDO" ;


================================================================================
Column definitions and constraints
================================================================================

  columnDef   := ident dataType { constraint } ;

  dataType    := "INT" | "FLOAT" | "BOOL" | "TEXT" | "DATE" | "TIMESTAMP"
               | "DECIMAL" [ "(" integer [ "," integer ] ")" ]
               | "VARCHAR" [ "(" integer ")" ] ;    ; INT accepts BIGINT/SMALLINT;
                                                    ; FLOAT accepts DOUBLE/REAL;
                                                    ; DECIMAL accepts NUMERIC;
                                                    ; DATE/TIMESTAMP are ISO text

  constraint  := "PRIMARY" "KEY"                        ; implies NOT NULL + UNIQUE
               | "UNIQUE"
               | "NOT" "NULL"
               | "AUTO_INCREMENT"                       ; INT only; also SERIAL
               | "DEFAULT" literal
               | "REFERENCES" ident "(" ident ")"       ; inline foreign key
                 [ "ON" "REMOVE" ( "CASCADE" | "SET" "NULL" | "RESTRICT" ) ]
               | "CHECK" "(" expression ")" ;


================================================================================
Expressions (precedence climbing; loosest binding first)
================================================================================

  expression  := orExpr ;
  orExpr      := andExpr { "OR"  andExpr } ;
  andExpr     := notExpr { "AND" notExpr } ;
  notExpr     := "NOT" notExpr | comparison ;

  comparison  := additive [ predicate ] ;
  predicate   := "IS" [ "NOT" ] "NULL"
               | [ "NOT" ] "IN" "(" ( subquery | literal { "," literal } ) ")"
               | [ "NOT" ] "BETWEEN" additive "AND" additive
               | [ "NOT" ] "LIKE" additive
               | compOp additive ;

  additive       := multiplicative { ( "+" | "-" ) multiplicative } ;
  multiplicative := unary { ( "*" | "/" ) unary } ;
  unary          := ( "-" | "+" ) unary | primary ; ; leading "-" negates

  primary     := "EXISTS" "(" subquery ")"
               | "(" ( subquery | orExpr ) ")"
               | caseExpr
               | call
               | literal
               | columnRef ;

  caseExpr    := "CASE" { "WHEN" expression "THEN" additive }
                 [ "ELSE" additive ] "END" ;         ; >= 1 WHEN branch
  call        := ident "(" [ expression { "," expression } ] ")"
               | "CAST" "(" expression "AS" dataType ")" ;

  subquery    := fetchStmt ;                  ; may reference outer columns
  columnRef   := ident [ "." ident ] ;        ; optional table qualifier
  literal     := integer | float | string | "TRUE" | "FALSE" | "NULL" ;


================================================================================
Notes / intentional limitations
================================================================================

  * Arithmetic operators (+ - * /) bind tighter than comparisons; "*" and "/"
    bind tighter than "+" and "-", and a leading "-" is unary negation. Integer
    operands give an integer result ("/" truncates); if either operand is a
    FLOAT the result is a FLOAT. Division by zero yields NULL.
  * PUT ... VALUES accepts literals only (including negative and float
    literals); PUT ... FETCH inserts the rows produced by a query.
  * A FROM may chain several LINK clauses to join more than two tables (the
    joins are applied left to right). INNER (LINK), LEFT, RIGHT, and FULL LINK
    require an ON predicate; CROSS LINK takes none and forms the full cartesian
    product. An INNER equi-join (leftCol = rightCol) is executed as a hash join;
    the outer joins use a nested loop. Tables may be given an alias (enabling
    self-joins).
  * UNION / UNION ALL / INTERSECT / EXCEPT combine two FETCH cores (left
    associative); all but UNION ALL remove duplicate rows.
  * Aggregates (COUNT/SUM/AVG/MIN/MAX) appear in a FETCH list or in HAVING;
    other ident "(" ... ")" calls are scalar functions valid anywhere in an
    expression. CASE and CAST are expression forms. An ungrouped aggregate over
    a single table (optionally with a WHEN that is an AND of column-vs-literal
    comparisons) runs through a push-based vectorized path; EXPLAIN labels it
    "Aggregate (Vectorized)".
  * A view (BUILD VIEW) stores its query and is materialized when referenced in
    a FROM; its definition is persisted across restarts. A multi-column BUILD
    INDEX is used for equality on all its columns.
  * Window functions attach OVER (...) to a select item. The ranking functions
    ROW_NUMBER/RANK/DENSE_RANK take no argument; SUM/COUNT/AVG/MIN/MAX take one
    column. PARTITION BY splits rows into groups; the window SORT BY orders rows
    within a partition for the ranking functions. Aggregate windows return the
    partition total (there is no explicit frame clause). Window queries read a
    single table.
  * FETCH ... FROM t AS OF <version> is MVCC time travel: it reconstructs the
    table as it existed at a past logical version. Every committed write
    statement (autocommit) or transaction advances a global version by one;
    version 0 is the empty state before any change. History is garbage-collected
    into per-table baselines (AS OF before the GC horizon is clamped to the
    baseline) and is persisted across restarts. AS OF placed on the FROM table
    applies to every table joined in the query (all read as of that version).
  * Between START and SAVE/UNDO a transaction reads a snapshot: single-table
    FETCHes see the committed state as of START plus the transaction's own
    writes, so a change another transaction commits meanwhile stays invisible.
  * Subqueries appear as IN (FETCH ...), EXISTS (FETCH ...), or a parenthesized
    scalar (FETCH ...), including inside MODIFY/REMOVE and the FETCH list. A
    subquery may be correlated: when its WHEN references a column from the
    enclosing single-table query, it is re-evaluated for each outer row.
  * A few constructs need two-token lookahead (peekAt(1)):
      - `ident "("` distinguishes an aggregate call from a column reference.
      - `NOT` before IN / BETWEEN / LIKE (vs. a boolean NOT).
  * Parsing fails fast on the first syntax error (no error recovery); errors
    carry line/column and the offending lexeme.
