src/frontend/parser.cpp
#include "frontend/parser.hpp"

#include <cctype>
#include <string>
#include <utility>

namespace db::parser {

namespace {

bool isComparisonToken(TokenType type) {
    switch (type) {
        case TokenType::EQ:
        case TokenType::NEQ:
        case TokenType::LT:
        case TokenType::LEQ:
        case TokenType::GT:
        case TokenType::GEQ:
            return true;
        default:
            return false;
    }
}

ComparisonOp toComparisonOp(TokenType type) {
    switch (type) {
        case TokenType::EQ: return ComparisonOp::Eq;
        case TokenType::NEQ: return ComparisonOp::Neq;
        case TokenType::LT: return ComparisonOp::Lt;
        case TokenType::LEQ: return ComparisonOp::Leq;
        case TokenType::GT: return ComparisonOp::Gt;
        case TokenType::GEQ: return ComparisonOp::Geq;
        default: return ComparisonOp::Eq;
    }
}

bool isLiteralToken(TokenType type) {
    switch (type) {
        case TokenType::INTEGER_LITERAL:
        case TokenType::FLOAT_LITERAL:
        case TokenType::STRING_LITERAL:
        case TokenType::TRUE:
        case TokenType::FALSE:
        case TokenType::NULL_LITERAL:
            return true;
        default:
            return false;
    }
}

std::string upperName(const std::string& s) {
    std::string out = s;
    for (char& c : out) c = static_cast<char>(std::toupper(static_cast<unsigned char>(c)));
    return out;
}

bool isAggregateName(const std::string& name) {
    std::string u = upperName(name);
    return u == "COUNT" || u == "SUM" || u == "AVG" || u == "MIN" || u == "MAX";
}

}

ParseError::ParseError(std::string message, int line, int column)
    : std::runtime_error(std::move(message)), line_(line), column_(column) {}

Parser::Parser(std::vector<Token> tokens) : tokens_(std::move(tokens)) {}

const Token& Parser::peek() const { return tokens_[pos_]; }

const Token& Parser::peekAt(std::size_t offset) const {
    std::size_t idx = pos_ + offset;
    if (idx >= tokens_.size()) {
        return tokens_.back();
    }
    return tokens_[idx];
}

const Token& Parser::previous() const { return tokens_[pos_ - 1]; }

bool Parser::isAtEnd() const { return peek().type == TokenType::END_OF_FILE; }

const Token& Parser::advance() {
    if (!isAtEnd()) {
        ++pos_;
    }
    return previous();
}

bool Parser::check(TokenType type) const { return peek().type == type; }

bool Parser::match(TokenType type) {
    if (check(type)) {
        advance();
        return true;
    }
    return false;
}

const Token& Parser::consume(TokenType type, const std::string& what) {
    if (check(type)) {
        return advance();
    }
    error(peek(), "expected " + what);
}

void Parser::error(const Token& tok, const std::string& message) const {
    std::string full = "syntax error at line " + std::to_string(tok.line) +
                       ", column " + std::to_string(tok.column) + ": " + message;
    if (tok.type == TokenType::END_OF_FILE) {
        full += " (reached end of input)";
    } else if (!tok.lexeme.empty()) {
        full += " (near '" + tok.lexeme + "')";
    }
    throw ParseError(std::move(full), tok.line, tok.column);
}

std::int64_t Parser::toInt64(const Token& tok) const {
    try {
        return static_cast<std::int64_t>(std::stoll(tok.lexeme));
    } catch (const std::exception&) {
        error(tok, "integer literal out of range");
    }
}

std::unique_ptr<LiteralExpr> Parser::makeLiteral(const Token& tok) {
    auto lit = std::make_unique<LiteralExpr>();
    switch (tok.type) {
        case TokenType::INTEGER_LITERAL:
            lit->kind = LiteralExpr::Kind::Integer;
            lit->intValue = toInt64(tok);
            break;
        case TokenType::FLOAT_LITERAL:
            lit->kind = LiteralExpr::Kind::Float;
            lit->doubleValue = std::stod(tok.lexeme);
            break;
        case TokenType::STRING_LITERAL:
            lit->kind = LiteralExpr::Kind::String;
            lit->stringValue = tok.lexeme;
            break;
        case TokenType::TRUE:
            lit->kind = LiteralExpr::Kind::Boolean;
            lit->boolValue = true;
            break;
        case TokenType::FALSE:
            lit->kind = LiteralExpr::Kind::Boolean;
            lit->boolValue = false;
            break;
        case TokenType::NULL_LITERAL:
            lit->kind = LiteralExpr::Kind::Null;
            break;
        default:
            error(tok, "expected a literal value");
    }
    return lit;
}

ASTNodePtr Parser::parseStatement() {
    const Token& t = peek();
    ASTNodePtr stmt;
    switch (t.type) {
        case TokenType::CREATE: stmt = parseCreate(); break;
        case TokenType::INSERT: stmt = parseInsert(); break;
        case TokenType::SELECT: stmt = parseSelectStatement(); break;
        case TokenType::EXPLAIN: {
            advance();
            stmt = parseSelect();
            if (auto* s = dynamic_cast<SelectStatement*>(stmt.get())) {
                s->explain = true;
            }
            break;
        }
        case TokenType::DELETE: stmt = parseDelete(); break;
        case TokenType::UPDATE: stmt = parseUpdate(); break;
        case TokenType::DROP: stmt = parseDrop(); break;
        case TokenType::ALTER: stmt = parseAlter(); break;
        case TokenType::TRUNCATE: {
            advance();
            consume(TokenType::TABLE, "RELATION");
            auto d = std::make_unique<DropStatement>();
            d->truncate = true;
            d->name = consume(TokenType::IDENTIFIER, "table name").lexeme;
            stmt = std::move(d);
            break;
        }
        case TokenType::BEGIN:
        case TokenType::COMMIT:
        case TokenType::ROLLBACK: stmt = parseTransaction(); break;
        default:
            error(t, "expected a statement (BUILD, PUT, FETCH, REMOVE, MODIFY, DISCARD, START, SAVE, or UNDO)");
    }

    match(TokenType::SEMICOLON);
    if (!isAtEnd()) {
        error(peek(), "unexpected token after statement");
    }
    return stmt;
}

ExpressionPtr Parser::parseWholeExpression() {
    ExpressionPtr e = parseExpression();
    match(TokenType::SEMICOLON);
    if (!isAtEnd()) {
        error(peek(), "unexpected token after expression");
    }
    return e;
}

ASTNodePtr Parser::parseCreate() {
    consume(TokenType::CREATE, "CREATE");

    if (match(TokenType::TABLE)) {
        auto stmt = std::make_unique<CreateStatement>();
        stmt->table = consume(TokenType::IDENTIFIER, "table name").lexeme;
        if (match(TokenType::AS)) {
            auto sel = parseSelect();
            stmt->asQuery = std::shared_ptr<SelectStatement>(
                dynamic_cast<SelectStatement*>(sel.release()));
            return stmt;
        }
        consume(TokenType::LPAREN, "'('");
        do {
            if (check(TokenType::PRIMARY)) {
                advance();
                consume(TokenType::KEY, "KEY");
                consume(TokenType::LPAREN, "'('");
                do {
                    stmt->primaryKeyColumns.push_back(
                        consume(TokenType::IDENTIFIER, "column name").lexeme);
                } while (match(TokenType::COMMA));
                consume(TokenType::RPAREN, "')'");
            } else {
                stmt->columns.push_back(parseColumnDefinition());
            }
        } while (match(TokenType::COMMA));
        consume(TokenType::RPAREN, "')'");
        return stmt;
    }

    if (match(TokenType::VIEW)) {
        auto stmt = std::make_unique<CreateViewStatement>();
        stmt->name = consume(TokenType::IDENTIFIER, "view name").lexeme;
        consume(TokenType::AS, "AS");
        auto sel = parseSelect();
        stmt->query = std::shared_ptr<SelectStatement>(
            dynamic_cast<SelectStatement*>(sel.release()));
        return stmt;
    }

    if (match(TokenType::INDEX)) {
        auto stmt = std::make_unique<CreateIdxStatement>();
        stmt->indexName = consume(TokenType::IDENTIFIER, "index name").lexeme;
        consume(TokenType::ON, "ON");
        stmt->table = consume(TokenType::IDENTIFIER, "table name").lexeme;
        consume(TokenType::LPAREN, "'('");
        do {
            stmt->columns.push_back(consume(TokenType::IDENTIFIER, "column name").lexeme);
        } while (match(TokenType::COMMA));
        consume(TokenType::RPAREN, "')'");
        return stmt;
    }

    error(peek(), "expected RELATION or INDEX after BUILD");
}

ColumnDefinition Parser::parseColumnDefinition() {
    ColumnDefinition def;
    def.name = consume(TokenType::IDENTIFIER, "column name").lexeme;

    const Token& typeTok = advance();
    switch (typeTok.type) {
        case TokenType::INT_TYPE: def.type = DataType::Int; break;
        case TokenType::BOOL_TYPE: def.type = DataType::Bool; break;
        case TokenType::TEXT_TYPE: def.type = DataType::Text; break;
        case TokenType::DATE_TYPE: def.type = DataType::Date; break;
        case TokenType::TIMESTAMP_TYPE: def.type = DataType::Timestamp; break;
        case TokenType::FLOAT_TYPE:
            def.type = DataType::Float;
            if (match(TokenType::LPAREN)) {
                consume(TokenType::INTEGER_LITERAL, "DECIMAL precision");
                if (match(TokenType::COMMA)) {
                    consume(TokenType::INTEGER_LITERAL, "DECIMAL scale");
                }
                consume(TokenType::RPAREN, "')'");
            }
            break;
        case TokenType::VARCHAR:
            def.type = DataType::Varchar;
            if (match(TokenType::LPAREN)) {
                const Token& lenTok = consume(TokenType::INTEGER_LITERAL, "VARCHAR length");
                def.varcharLength = static_cast<int>(toInt64(lenTok));
                consume(TokenType::RPAREN, "')'");
            }
            break;
        default:
            error(typeTok, "expected a column type (INT, FLOAT, BOOL, TEXT, VARCHAR, DATE, TIMESTAMP)");
    }

    for (;;) {
        if (match(TokenType::PRIMARY)) {
            consume(TokenType::KEY, "KEY");
            def.primaryKey = true;
        } else if (match(TokenType::UNIQUE)) {
            def.unique = true;
        } else if (match(TokenType::AUTOINCR)) {
            def.autoIncrement = true;
        } else if (match(TokenType::NOT)) {
            consume(TokenType::NULL_LITERAL, "NULL");
            def.notNull = true;
        } else if (match(TokenType::DEFAULT)) {
            const Token& lit = peek();
            def.hasDefault = true;
            switch (lit.type) {
                case TokenType::INTEGER_LITERAL:
                    def.defaultValue.kind = CachedValue::Kind::Int;
                    def.defaultValue.intValue = toInt64(lit);
                    break;
                case TokenType::FLOAT_LITERAL:
                    def.defaultValue.kind = CachedValue::Kind::Float;
                    def.defaultValue.doubleValue = std::stod(lit.lexeme);
                    break;
                case TokenType::STRING_LITERAL:
                    def.defaultValue.kind = CachedValue::Kind::Text;
                    def.defaultValue.stringValue = lit.lexeme;
                    break;
                case TokenType::TRUE:
                    def.defaultValue.kind = CachedValue::Kind::Bool;
                    def.defaultValue.boolValue = true;
                    break;
                case TokenType::FALSE:
                    def.defaultValue.kind = CachedValue::Kind::Bool;
                    def.defaultValue.boolValue = false;
                    break;
                case TokenType::NULL_LITERAL:
                    def.defaultValue.kind = CachedValue::Kind::Null;
                    break;
                default:
                    error(lit, "expected a literal after DEFAULT");
            }
            advance();
        } else if (match(TokenType::REFERENCES)) {
            def.refTable = consume(TokenType::IDENTIFIER, "referenced table").lexeme;
            consume(TokenType::LPAREN, "'('");
            def.refColumn = consume(TokenType::IDENTIFIER, "referenced column").lexeme;
            consume(TokenType::RPAREN, "')'");
            while (match(TokenType::ON)) {
                bool onUpdate = false;
                if (match(TokenType::UPDATE)) {
                    onUpdate = true;
                } else {
                    consume(TokenType::DELETE, "REMOVE or MODIFY");
                }
                int action = 0;
                if (match(TokenType::CASCADE)) {
                    action = 1;
                } else if (match(TokenType::SET)) {
                    consume(TokenType::NULL_LITERAL, "NULL");
                    action = 2;
                } else {
                    consume(TokenType::RESTRICT, "RESTRICT");
                    action = 0;
                }
                if (onUpdate) {
                    def.refOnUpdate = action;
                } else {
                    def.refOnDelete = action;
                }
            }
        } else if (match(TokenType::CHECK)) {
            consume(TokenType::LPAREN, "'('");
            ExpressionPtr e = parseExpression();
            consume(TokenType::RPAREN, "')'");
            def.checkExpr = std::shared_ptr<Expression>(std::move(e));
        } else {
            break;
        }
    }
    return def;
}

ASTNodePtr Parser::parseInsert() {
    consume(TokenType::INSERT, "INSERT");
    consume(TokenType::INTO, "INTO");

    auto stmt = std::make_unique<InsertStatement>();
    stmt->table = consume(TokenType::IDENTIFIER, "table name").lexeme;

    if (match(TokenType::LPAREN)) {
        do {
            stmt->columns.push_back(consume(TokenType::IDENTIFIER, "column name").lexeme);
        } while (match(TokenType::COMMA));
        consume(TokenType::RPAREN, "')'");
    }

    if (check(TokenType::SELECT)) {
        auto sel = parseSelect();
        stmt->select = std::unique_ptr<SelectStatement>(
            dynamic_cast<SelectStatement*>(sel.release()));
        parseReturning(stmt->returningStar, stmt->returning);
        return stmt;
    }

    if (match(TokenType::DEFAULT)) {
        consume(TokenType::VALUES, "VALUES");
        stmt->defaultValues = true;
        stmt->rows.emplace_back();
        parseReturning(stmt->returningStar, stmt->returning);
        return stmt;
    }

    consume(TokenType::VALUES, "VALUES");
    do {
        consume(TokenType::LPAREN, "'('");
        std::vector<ExpressionPtr> row;
        do {
            row.push_back(parseLiteral());
        } while (match(TokenType::COMMA));
        consume(TokenType::RPAREN, "')'");
        stmt->rows.push_back(std::move(row));
    } while (match(TokenType::COMMA));

    parseOnConflict(*stmt);
    parseReturning(stmt->returningStar, stmt->returning);
    return stmt;
}

void Parser::parseWindowSpec(WindowExpr& win) {
    consume(TokenType::OVER, "OVER");
    consume(TokenType::LPAREN, "'('");
    if (match(TokenType::PARTITION)) {
        consume(TokenType::BY, "BY");
        do {
            win.partitionBy.push_back(parseColumnRef());
        } while (match(TokenType::COMMA));
    }
    if (match(TokenType::ORDER)) {
        consume(TokenType::BY, "BY");
        do {
            WindowExpr::OrderKey key;
            key.column = parseColumnRef();
            if (match(TokenType::ASC)) key.ascending = true;
            else if (match(TokenType::DESC)) key.ascending = false;
            win.orderBy.push_back(std::move(key));
        } while (match(TokenType::COMMA));
    }
    consume(TokenType::RPAREN, "')'");
}

SelectStatement::JoinClause Parser::parseJoinClause() {
    SelectStatement::JoinClause jc;
    if (match(TokenType::LEFT)) {
        consume(TokenType::JOIN, "LINK");
        jc.kind = SelectStatement::JoinKind::Left;
    } else if (match(TokenType::RIGHT)) {
        consume(TokenType::JOIN, "LINK");
        jc.kind = SelectStatement::JoinKind::Right;
    } else if (match(TokenType::FULL)) {
        consume(TokenType::JOIN, "LINK");
        jc.kind = SelectStatement::JoinKind::Full;
    } else if (match(TokenType::CROSS)) {
        consume(TokenType::JOIN, "LINK");
        jc.kind = SelectStatement::JoinKind::Cross;
    } else {
        consume(TokenType::JOIN, "LINK");
        jc.kind = SelectStatement::JoinKind::Inner;
    }
    jc.table = consume(TokenType::IDENTIFIER, "table name").lexeme;
    jc.alias = parseOptionalAlias();
    if (jc.kind != SelectStatement::JoinKind::Cross) {
        consume(TokenType::ON, "ON");
        jc.on = parseExpression();
    }
    return jc;
}

ASTNodePtr Parser::parseSelectStatement() {
    ASTNodePtr node = parseSelect();
    while (check(TokenType::UNION) || check(TokenType::INTERSECT) ||
           check(TokenType::EXCEPT)) {
        auto setop = std::make_unique<SetOpStatement>();
        if (match(TokenType::UNION)) {
            setop->op = SetOpStatement::Op::Union;
            setop->all = match(TokenType::ALL);
        } else if (match(TokenType::INTERSECT)) {
            setop->op = SetOpStatement::Op::Intersect;
        } else {
            consume(TokenType::EXCEPT, "EXCEPT");
            setop->op = SetOpStatement::Op::Except;
        }
        ASTNodePtr rightNode = parseSelect();
        auto* rsel = dynamic_cast<SelectStatement*>(rightNode.get());
        if (rsel == nullptr) {
            error(peek(), "expected FETCH after a set operator");
        }
        rightNode.release();
        setop->right = std::unique_ptr<SelectStatement>(rsel);
        setop->left = std::move(node);
        node = std::move(setop);
    }
    return node;
}

ASTNodePtr Parser::parseSelect() {
    consume(TokenType::SELECT, "SELECT");
    auto stmt = std::make_unique<SelectStatement>();

    if (match(TokenType::DISTINCT)) {
        stmt->distinct = true;
    }

    if (match(TokenType::STAR)) {
        stmt->selectStar = true;
    } else {
        do {
            if (check(TokenType::IDENTIFIER) && peekAt(1).type == TokenType::LPAREN &&
                isAggregateName(peek().lexeme)) {
                auto fn = parseAggregate();
                if (check(TokenType::OVER)) {
                    auto win = std::make_unique<WindowExpr>();
                    win->name = fn->name;
                    win->argument = std::move(fn->argument);
                    parseWindowSpec(*win);
                    auto col = std::make_unique<ColumnRef>();
                    col->computed = std::move(win);
                    col->column = "window";
                    if (match(TokenType::AS)) {
                        col->alias = consume(TokenType::IDENTIFIER, "alias").lexeme;
                    }
                    stmt->columns.push_back(std::move(col));
                } else {
                    if (match(TokenType::AS)) {
                        fn->alias = consume(TokenType::IDENTIFIER, "alias").lexeme;
                    }
                    stmt->aggregates.push_back(std::move(fn));
                }
            } else {
                ExpressionPtr e = parseAdditive();
                if (check(TokenType::OVER)) {
                    auto* call = dynamic_cast<CallExpr*>(e.get());
                    if (call == nullptr) {
                        error(peek(), "OVER requires a window function call");
                    }
                    auto win = std::make_unique<WindowExpr>();
                    win->name = call->name;
                    parseWindowSpec(*win);
                    auto col = std::make_unique<ColumnRef>();
                    col->computed = std::move(win);
                    col->column = "window";
                    if (match(TokenType::AS)) {
                        col->alias = consume(TokenType::IDENTIFIER, "alias").lexeme;
                    }
                    stmt->columns.push_back(std::move(col));
                } else {
                    Expression* raw = e.release();
                    std::unique_ptr<ColumnRef> item;
                    if (auto* cr = dynamic_cast<ColumnRef*>(raw)) {
                        item = std::unique_ptr<ColumnRef>(cr);
                    } else {
                        item = std::make_unique<ColumnRef>();
                        item->computed = ExpressionPtr(raw);
                        item->column = expressionToString(*item->computed);
                    }
                    if (match(TokenType::AS)) {
                        item->alias = consume(TokenType::IDENTIFIER, "alias").lexeme;
                    }
                    stmt->columns.push_back(std::move(item));
                }
            }
        } while (match(TokenType::COMMA));
    }

    consume(TokenType::FROM, "FROM");
    stmt->table = consume(TokenType::IDENTIFIER, "table name").lexeme;
    if (check(TokenType::AS) && peekAt(1).type == TokenType::OF) {
        advance();
        advance();
        const Token& v = consume(TokenType::INTEGER_LITERAL, "AS OF version");
        stmt->asOf = true;
        stmt->asOfVersion = static_cast<unsigned long long>(toInt64(v));
    } else {
        stmt->tableAlias = parseOptionalAlias();
    }
